--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                 </p>
               </div>
               <div class="col-4">
-                <img src="assets/image/Environmental Protection.jpg" alt="" class="img-fluid" data-aos="fade-left"
+                <img src="assets/image/Environmental Protection.jpg" alt="" class="img-fluid rounded-4" data-aos="fade-left"
                 data-aos-duration="1000"
                 data-aos-delay="200" height="300px">
               </div>
@@ -399,6 +399,26 @@
               </div>
               <div class="col-4">
                 <img src="assets/image/energy save.jpg" alt="" class="img-fluid" data-aos="fade-left"
+                data-aos-duration="1000"
+                data-aos-delay="200" style="height: 300px;">
+              </div>
+              </div>
+            </div>
+          </div>
+          <div class="content-body bg-body-secondary">
+            <div class="text container py-3">
+              <div class="row align-items-center">
+                <div class="col-8">
+                <h3>៣. ឥទ្ធិពលអាកាសធាតុ</h3>
+                <p>
+                  - ការកែច្នៃអាចកាត់បន្ថយការបំភាយឧស្ម័នផ្ទះកញ្ចក់ (CO₂, CH₄) ដែលបង្កឲ្យកើតមានការឡើងកម្ដៅផែនដី។
+                </p>
+                <p>
+                  - ពេលសំណល់ត្រូវចាក់ចោលក្នុងកន្លែងចាក់សំរាមវាអាចបញ្ចេញឧស្ម័នមេតាន (CH₄) ដែលមានឥទ្ធិពលខ្លាំងលើអាកាសធាតុ។ ការកែច្នៃអាចជួយកាត់បន្ថយបញ្ហានេះ។
+                </p>
+              </div>
+              <div class="col-4">
+                <img src="assets/image/climate.jpg" alt="" class="img-fluid rounded-4" data-aos="fade-left"
                 data-aos-duration="1000"
                 data-aos-delay="200" style="height: 300px;">
               </div>
