--- a/index.html
+++ b/index.html
@@ -354,14 +354,14 @@
         </div>
       </section>
       <section class="benefit">
-        <div class="text-center scale-up-ver-center py-4">
-          <h2>អត្ថប្រយោជន៍នៃការកែច្នៃ</h2>
+        <div class="text-center pt-4 bg-body-secondary">
+          <h2 class="scale-up-ver-center m-0">អត្ថប្រយោជន៍នៃការកែច្នៃ</h2>
         </div>
         <div class="content">
           <div class="content-body bg-body-secondary">
             <div class="text container py-3">
               <div class="row align-items-center">
-                <div class="col-8">
+                <div class="col-12 col-md-8">
                 <h3>១. ការការពារបរិស្ថាន</h3>
                 <p>
                   -
@@ -377,7 +377,7 @@
                   ដែលគេត្រូវប្រើក្នុងការផលិតថ្មី។
                 </p>
               </div>
-              <div class="col-4">
+              <div class="col-12 col-md-4">
                 <img src="assets/image/Environmental Protection.jpg" alt="" class="img-fluid rounded-4" data-aos="fade-left"
                 data-aos-duration="1000"
                 data-aos-delay="200" height="300px">
@@ -388,7 +388,7 @@
           <div class="content-body bg-white">
             <div class="text container py-3">
               <div class="row align-items-center">
-                <div class="col-8">
+                <div class="col-12 col-md-8">
                 <h3>២. ការសន្សំថាមពល</h3>
                 <p>
                   - ការផលិតថ្មីត្រូវការថាមពលច្រើនក្នុងដំណើរការដែលចាប់ផ្តើមពីការទាញយកវត្ថុធាតុដើម រហូតដល់ការផលិត និងដឹកជញ្ជូន។
@@ -397,7 +397,7 @@
                   - ការកែច្នៃប្រើថាមពលតិចជាង ដោយសារវាអនុញ្ញាតឲ្យយើងប្រើសម្ភារៈដែលមានរួចហើយ។
                 </p>
               </div>
-              <div class="col-4">
+              <div class="col-12 col-md-4">
                 <img src="assets/image/energy save.jpg" alt="" class="img-fluid" data-aos="fade-left"
                 data-aos-duration="1000"
                 data-aos-delay="200" style="height: 300px;">
@@ -408,7 +408,7 @@
           <div class="content-body bg-body-secondary">
             <div class="text container py-3">
               <div class="row align-items-center">
-                <div class="col-8">
+                <div class="col-12 col-md-8">
                 <h3>៣. ឥទ្ធិពលអាកាសធាតុ</h3>
                 <p>
                   - ការកែច្នៃអាចកាត់បន្ថយការបំភាយឧស្ម័នផ្ទះកញ្ចក់ (CO₂, CH₄) ដែលបង្កឲ្យកើតមានការឡើងកម្ដៅផែនដី។
@@ -417,7 +417,7 @@
                   - ពេលសំណល់ត្រូវចាក់ចោលក្នុងកន្លែងចាក់សំរាមវាអាចបញ្ចេញឧស្ម័នមេតាន (CH₄) ដែលមានឥទ្ធិពលខ្លាំងលើអាកាសធាតុ។ ការកែច្នៃអាចជួយកាត់បន្ថយបញ្ហានេះ។
                 </p>
               </div>
-              <div class="col-4">
+              <div class="col-12 col-md-4">
                 <img src="assets/image/climate.jpg" alt="" class="img-fluid rounded-4" data-aos="fade-left"
                 data-aos-duration="1000"
                 data-aos-delay="200" style="height: 300px;">
