--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             </div>
             <div class="col-md-6">
               <div
-                class="banner-img position-relative"
+                class="banner-img position-relative d-none d-md-block"
                 data-aos="fade-left"
                 data-aos-duration="1000"
                 data-aos-delay="200"
