--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
               </h2>
               <a
                 href=""
-                class="btn bg-success text-white mt-5 hvr-wobble-top"
+                class="btn bg-success text-white mt-2 mb-3 mb-md-0 mt-md-5 hvr-wobble-top"
                 data-aos="fade-right"
                 data-aos-duration="1000"
                 data-aos-delay="200"
@@ -364,16 +364,14 @@
                 <div class="col-12 col-md-8">
                 <h3>១. ការការពារបរិស្ថាន</h3>
                 <p>
-                  -
-                  ការកែច្នៃជួយកាត់បន្ថយសំណល់ដែលត្រូវចាក់ចូលក្នុងកន្លែងចាក់សំរាម
-                  និងកន្លែងចាក់កាកសំណល់ផ្សេងៗ។
+                  <span class="me-1">-</span> ការកែច្នៃជួយកាត់បន្ថយសំណល់ដែលត្រូវចាក់ចូលក្នុងកន្លែងចាក់សំរាម និងកន្លែងចាក់កាកសំណល់ផ្សេងៗ។
                 </p>
                 <p>
-                  - បញ្ហាសំណល់ច្រើនធ្វើឲ្យមានការបំពុលដី ទឹក និងខ្យល់។
+                  <span class="me-1">-</span> បញ្ហាសំណល់ច្រើនធ្វើឲ្យមានការបំពុលដី ទឹក និងខ្យល់។
                   ការកែច្នៃអាចជួយកាត់បន្ថយបញ្ហានេះ។
                 </p>
                 <p>
-                  - ការកែច្នៃក៏អាចអភិរក្សធនធានធម្មជាតិដូចជាទឹក ដើមឈើ និងរ៉ែ
+                  <span class="me-1">-</span> ការកែច្នៃក៏អាចអភិរក្សធនធានធម្មជាតិដូចជាទឹក ដើមឈើ និងរ៉ែ
                   ដែលគេត្រូវប្រើក្នុងការផលិតថ្មី។
                 </p>
               </div>
@@ -391,10 +389,10 @@
                 <div class="col-12 col-md-8">
                 <h3>២. ការសន្សំថាមពល</h3>
                 <p>
-                  - ការផលិតថ្មីត្រូវការថាមពលច្រើនក្នុងដំណើរការដែលចាប់ផ្តើមពីការទាញយកវត្ថុធាតុដើម រហូតដល់ការផលិត និងដឹកជញ្ជូន។
+                  <span class="me-1">-</span> ការផលិតថ្មីត្រូវការថាមពលច្រើនក្នុងដំណើរការដែលចាប់ផ្តើមពីការទាញយកវត្ថុធាតុដើម រហូតដល់ការផលិត និងដឹកជញ្ជូន។
                 </p>
                 <p>
-                  - ការកែច្នៃប្រើថាមពលតិចជាង ដោយសារវាអនុញ្ញាតឲ្យយើងប្រើសម្ភារៈដែលមានរួចហើយ។
+                  <span class="me-1">-</span> ការកែច្នៃប្រើថាមពលតិចជាង ដោយសារវាអនុញ្ញាតឲ្យយើងប្រើសម្ភារៈដែលមានរួចហើយ។
                 </p>
               </div>
               <div class="col-12 col-md-4">
@@ -411,10 +409,10 @@
                 <div class="col-12 col-md-8">
                 <h3>៣. ឥទ្ធិពលអាកាសធាតុ</h3>
                 <p>
-                  - ការកែច្នៃអាចកាត់បន្ថយការបំភាយឧស្ម័នផ្ទះកញ្ចក់ (CO₂, CH₄) ដែលបង្កឲ្យកើតមានការឡើងកម្ដៅផែនដី។
+                  <span class="me-1">-</span> ការកែច្នៃអាចកាត់បន្ថយការបំភាយឧស្ម័នផ្ទះកញ្ចក់ (CO₂, CH₄) ដែលបង្កឲ្យកើតមានការឡើងកម្ដៅផែនដី។
                 </p>
                 <p>
-                  - ពេលសំណល់ត្រូវចាក់ចោលក្នុងកន្លែងចាក់សំរាមវាអាចបញ្ចេញឧស្ម័នមេតាន (CH₄) ដែលមានឥទ្ធិពលខ្លាំងលើអាកាសធាតុ។ ការកែច្នៃអាចជួយកាត់បន្ថយបញ្ហានេះ។
+                  <span class="me-1">-</span> ពេលសំណល់ត្រូវចាក់ចោលក្នុងកន្លែងចាក់សំរាមវាអាចបញ្ចេញឧស្ម័នមេតាន (CH₄) ដែលមានឥទ្ធិពលខ្លាំងលើអាកាសធាតុ។ ការកែច្នៃអាចជួយកាត់បន្ថយបញ្ហានេះ។
                 </p>
               </div>
               <div class="col-12 col-md-4">
