--- a/payment.html
+++ b/payment.html
@@ -117,7 +117,7 @@
           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body text-center py-4">
-          <img src="https://api.qrserver.com/v1/create-qr-code/?size=250x250&data=ABAPayment12345" alt="ABA QR Code"
+          <img src="assets/makara/image/qrcode.jpg" alt="ABA QR Code"
             class="img-fluid rounded" style="max-width: 280px;">
           <p class="mt-4">សូមស្កែន QR Code ដើម្បីបង់ប្រាក់តាមរយៈ ABA Bank</p>
         </div>
@@ -136,7 +136,7 @@
           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body text-center py-4">
-          <img src="https://api.qrserver.com/v1/create-qr-code/?size=250x250&data=ACLEDAPayment12345"
+          <img src="assets/makara/image/qrcode.jpg"
             alt="ACLEDA QR Code" class="img-fluid rounded" style="max-width: 280px;">
           <p class="mt-4">សូមស្កែន QR Code ដើម្បីបង់ប្រាក់តាមរយៈ ACLEDA Bank</p>
         </div>
