--- a/be_eco.html
+++ b/be_eco.html
@@ -1,121 +1,159 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="km">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>បរិច្ចាគ</title>
+  <title>Be Eco</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
-
-
-  <!-- Custom Styles -->
-  <link rel="stylesheet" href="assets/css/theme.css">
-  <link rel="stylesheet" href="assets/css/style.css">
 
   <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Hanuman:wght@100..900&family=Oswald:wght@200..700&family=Pacifico&family=Poppins:wght@100..900&family=Roboto:wght@100..900&family=Sevillana&display=swap"
-    rel="stylesheet">
-</head>
-<style>
-  body {
-    font-family: 'Hanuman', sans-serif;
-    background-color: #f9f9f9;
-    color: #333;
-  }
-  .hero-banner {
-    background-color: #f8f9fa;
-    padding: 40px 0;
-    text-align: center;
-    margin-bottom: 30px;
-  }
+  <link href="https://fonts.googleapis.com/css2?family=Hanuman:wght@100..900&display=swap" rel="stylesheet">
+  
 
-  .hero-banner h1 {
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: #333;
-  }
-
-  .hero-banner img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 10px;
-  }
-
-  .card {
-    border: none;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    overflow: hidden;
-  }
-
-  .card-img {
-    width: 100%;
-    height: auto;
-  }
+  <style>
+    body {
+      font-family: 'Hanuman', sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+      line-height: 1.7;
+    }
+    h2 {
+      border-bottom: 2px solid #28a745;
+      padding-bottom: 5px;
+      margin-top: 40px;
+    }
+    .icon-list li {
+      margin-bottom: 8px;
+    }
+    .callout {
+      padding: 15px;
+      margin: 20px 0;
+      border-left: 5px solid #28a745;
+      background-color: #e8f5e9;
+    }
+    .accordion-button:not(.collapsed) {
+      color: #fff;
+      background-color: #28a745;
+    }
+    .accordion-button {
+      color: #28a745;
+    }
   </style>
+</head>
 
 <body>
+  <div class="container my-4">
 
-  <!-- Hero Section -->
-  <section>
-    <div class="container">
-      <div class="hero-banner">
-        <div class="row">
-                    <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
-            <h1 class="text-center animate__animated animate__fadeInLeft fw-bold">
-              Be Eco Sustainable Shop
-            </h1>
-          </div>
-
-          <div class="col-12 col-md-6">
-            <img src="https://scontent.fpnh5-2.fna.fbcdn.net/v/t39.30808-6/305832157_498398952126334_6194755930081013843_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeFoH2Rnn-YpPzePeGIKChmM483qND_H1f3jzeo0P8fV_RaxHElqvKYBnYXteglP6JnOhaC3EXdIbLj4NJA4wc1I&_nc_ohc=Lt-FiEucP6AQ7kNvwExAeiJ&_nc_oc=AdlfV97scNXwhk-ZhN9KuETaJ9siLExEK0j6QBYGD-mJbW0YXs-lSjfSekVdYaXWuos&_nc_zt=23&_nc_ht=scontent.fpnh5-2.fna&_nc_gid=VHHk2DaiLtNUSlnJQ1ewbQ&oh=00_AfY6Q2hOS7e7dUbwcbM5DmctANiY9ERV7Y1xOzztIA0fjw&oe=68BF2289" alt="Pizza 4P’s program" class="img-fluid rounded animate__animated animate__fadeInRight" style="width: 80%;">
-          </div>
-        </div>
-      </div>
+    <!-- Hero Banner -->
+    <div class="text-center mb-5">
+      <h1 class="fw-bold">Be Eco Sustainable Shop</h1>
+      <img src="assets/Kropum/img/snurkhorav.jpg" alt="Be Eco" class="img-fluid rounded mt-3" style="max-width: 50%;">
     </div>
-  </section>
 
-  <!-- Details Section -->
-  <section class="mt-5">
-    <div class="container">
-      <h2>លម្អិតអំពីពួកយើង</h2>
+    <!-- About Section -->
+    <section>
+      <h2>អំពីពួកយើង</h2>
       <p>
-        Be Eco គឺជាហាងលក់ទំនិញ <br>និងកន្លែងសហគមន៍ដែលផ្តោតលើជីវិតប្រកបដោយប្រសិទ្ធភាពបរិស្ថាន, ផលិតផលបរិស្ថាន និងសកម្មភាពបរិស្ថានដោយដៃ។ <br>វារួមបញ្ចូលពាណិជ្ជកម្ម និងបរិស្ថានវិជ្ជាជីវៈតាមរយៈសិក្ខាសាលា, ផលិតផល <br>និងការប្រមូលសំណល់គាំទ្រអ្នកលក់ផលិតផលបរិស្ថានក្នុងស្រុកជាង 20 ម៉ាក និងអ្នកផលិត, ផ្តល់ឱកាសលក់រាយ <br>និងការយល់ដឹងក្នុងសហគមន៍អំពីបញ្ហាបរិស្ថាន"Zero Waste Repair Fairs" ដើម្បីជួសជុលសម្ភារៈដូចជា ស្បែកជើង, គ្រឿងអលង្ការ និងកុងទ័រផ្លុំ<br>• ចំណុចប្រមូលសំណល់ដែលអាចកែច្នៃបាន: កញ្ចក់, ថ្ម, សម្លៀកបំពាក់/ក្រណាត់ និងប្លាស្ទិចរឹង
-        <br>អតិថិជនអាចយកសំណល់ដែលអាចកែច្នៃបានមកដាក់នៅហាងបាន 
+        ហាង Be Eco Sustainable Shop ផ្តល់ជូនការជាវទិញ ៤ ថ្ងៃក្នុងមួយសប្តាហ៍ និងរៀបចំព្រឹត្តិការណ៍ និងសន្និសីទផ្ដោតលើការអភិរក្សបរិស្ថាន។ 
+        អ្នកអាចស្វែងរកផលិតផលបរិស្ថានកម្ពុជា និងសិប្បកម្មក្នុងស្រុក រួមទាំងមុខម្ហូប អំណោយ សម្លៀកបំពាក់ គ្រឿងប្រើផ្ទះ និងផលិតផលប្រចាំថ្ងៃដែលធ្វើឡើងពីសម្ភារៈចាស់។
       </p>
-      <p><a href="https://maps.app.goo.gl/zENHUpShw9W1ZUXm7" class="text-decoration-none text-muted"><span class="text-success"><i class="fa-solid fa-location-dot" ></i></span>House 52A ផ្លូវលេខ ៤៦៤, ភ្នំពេញ 120110</a></p>
+    </section>
+
+    <!-- What We Take -->
+    <section>
+      <h2>អ្វីដែលយើងទទួល</h2>
+      <ul class="list-unstyled icon-list">
+        <li>🍫 ម្ហូបដែលមិនទាន់បើក, ភេសជ្ជៈ,​ មិនផុតកំណត់</li>
+        <li>👕 សម្លៀកបំពាក់ និង គ្រឿងតុបតែងខ្លួន</li>
+        <li>🏠 ទ្រព្យសម្បត្តិលម្អផ្ទះ</li>
+        <li>👟 ស្បែកជើង, 👜 កាបូប, 🎒 កាបូបស្ពាយ</li>
+        <li>🛏️ កន្សែង, គ្រែ, ខ្នើយ</li>
+        <li>🎨 គ្រៀងតុបតែងផ្ទះ, របស់សិប្បកម្ម, សម្ភារៈសិក្សា, ល្បែងកម្សាន្ត</li>
+        <li>🧸 តុក្កតា, ប្រដាប់ក្មេងលេង</li>
+        <li>🧴 ដបថ្ម, ផ្លាស្ទីកស្ងួត, សាប៊ូ</li>
+        <li>📚 សៀវភៅ, DVD, ទស្សនាវដ្តី</li>
+        
+      </ul>
+    </section>
 
 
-      <div class="row g-3 mt-3 animate__delay-1s animate__animated animate__fadeInUp">
-        <div class="col-12 col-md-4">
-          <div class="card">
-            <img src="https://scontent.fpnh5-4.fna.fbcdn.net/v/t39.30808-6/516124864_1320717296720345_5252694529790368947_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeE8GWFMlKO0SI9AAHOHOjFH11F-Yl98_9jXUX5iX3z_2Cy36ENER8RJpkqMDAqSKrIbiBXPtALtXg0zN5g9QPvp&_nc_ohc=3hCpoipRHI0Q7kNvwFl0Om4&_nc_oc=AdmR_trADcNWHzZQ0WmYFZDDZ0ouahoPiK0HCPAXAX2oXoaYXgzkN55DZuXNIAaySA0&_nc_zt=23&_nc_ht=scontent.fpnh5-4.fna&_nc_gid=SPsbQoMUWWCB368CF8K5EQ&oh=00_AfYcTSWb37wm-Y1vbW-sB3vC3xUAtdeNszWdmNY0enf3Ug&oe=68BF1F45" alt="Recycling activity 1" class="card-img">
+    <!-- How To Give - Accordion -->
+    <section>
+      <h2>របៀបបរិច្ចាគ</h2>
+      <div class="accordion" id="howToGive">
+        <!-- Dropoff -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+              ១. Dropoff មកផ្ទាល់
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#howToGive">
+            <div class="accordion-body">
+               <p>
+        <strong>Street 464, TTP, Phnom Penh</strong><br>
+        ម៉ោង៖ 12:00 - 17:30 ពុធ, ព្រហស្បតិ៍, សុក្រ<br>
+        សៅរ៍ និងអាទិត្យ 10:00 - 18:00<br>
+        បិទថ្ងៃចន្ទ និងថ្ងៃអង្គារ
+      </p>
+            </div>
           </div>
         </div>
-        <div class="col-12 col-md-4">
-          <div class="card">
-            <img src="https://scontent.fpnh5-2.fna.fbcdn.net/v/t39.30808-6/489830712_1249701183821957_482836254408314119_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeGprst-sutT6QIXuHaWr-oaDdnFXhCKrTYN2cVeEIqtNhG4-UD8WrzHsngpv4sSxNrjsn0yuZC7ph9L3pLrWOMK&_nc_ohc=InsYzpVqGTgQ7kNvwFwI_F-&_nc_oc=Adm9MgHrbTSXfrryJFkbwaDEvKQtqvjxCGQCbbTb0eUlfU3SxlZTiyNDAhNevNev9AI&_nc_zt=23&_nc_ht=scontent.fpnh5-2.fna&_nc_gid=IiDM58B86O0vlSlDFWfrvg&oh=00_AfYZ3RMf6rAG1EemZTsc6afMbPgz7K7u9Uaby236S4yq2A&oe=68BF2E4D" alt="" class="card-img">
-          </div>
         </div>
-        <div class="col-12 col-md-4">
-          <div class="card">
-            <img src="https://scontent.fpnh5-4.fna.fbcdn.net/v/t39.30808-6/489407355_1248590583933017_1904553181255073810_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeExmqd6m5Fldmagi3xyoxLQbi-chuEow4JuL5yG4SjDgpEggkLXmY2BFe-GvdZUht7nSByTK44Ksk17DM-6eOt6&_nc_ohc=FZSHRdM1NloQ7kNvwFQ1Mcr&_nc_oc=Adm4RNp5HHQh4il-2KdJ9qPAo1YO75xPOmSdA_Sl9Y-18m9kNqoTK_qgYFAMV3I76xk&_nc_zt=23&_nc_ht=scontent.fpnh5-4.fna&_nc_gid=xnvB9O4lPZTE54TJb9qjjw&oh=00_AfZkL1RNLwMGUHZENDq-_Srs-tysxeyky9ccQZjst4ABUA&oe=68BF4213" alt="Recycling activity 3" class="card-img" style="height: 420px; object-fit: cover;">
-          </div>
-        </div>
+    </section>
+
+    <!-- Contact & Volunteer -->
+    <section>
+      <h2>ទំនាក់ទំនង និង ស្ម័គ្រចិត្ត</h2>
+      <p>Email: <a href="mailto:beeco.sustainable.kh@gmail.com">beeco.sustainable.kh@gmail.com</a></p>
+      <p>Messenger: <a href="https://www.facebook.com/be.eco.cambodia">Facebook</a> / <a href="https://www.instagram.com/be.eco.sustainable?igsh=YWllYnU4NWhteHcy">Instagram</a></p>
+      <p>
+        យើងស្វាគមន៍អ្នកស្ម័គ្រចិត្តដែលចង់ចូលរួមជាមួយយើងក្នុងការផ្សព្វផ្សាយ និងអភិរក្សបរិស្ថាន។ សូមផ្ញើសារ ឬមកកាន់ហាងក្នុងម៉ោងបើកហាងប្រសិនបើចាប់អារម្មណ៍។
+      </p>
+       <p>
+        <strong>សូមចំណាំ៖</strong> យើងមិនប្រើ Telegram ឬ WhatsApp សម្រាប់ការទំនាក់ទំនងទេ។ សូមប្រើ Facebook Messenger ឬអ៊ីមែលផ្ទាល់។
+      </p>
+    </section>
+
+      <h2><i class="bi bi-geo-alt-fill"></i>ទីតាំងបរិច្ចាគ</h2>
+
+    <div class="accordion" id="locationsAccordion">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="loc1">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseLoc1">
+        Be Eco Sustainable Shop (Street 464, TTP)
+      </button>
+    </h2>
+    
+    <div id="collapseLoc1" class="accordion-collapse collapse show" data-bs-parent="#locationsAccordion">
+      <div class="accordion-body">
+          <div class="col-md-4">
+    <div class="card p-3">
+      <img src="assets/Kropum/img/beco____-.jpg" alt="">
+      <h5 class="mt-2">Be Eco Sustainable Shop</h5>
+      <p>Street 464, TTP</p>
+      <p>Wed-Fri 12-6, Weekend 10-6</p>
+      <a href="https://maps.app.goo.gl/LoUhX9AiJ2miCTc96" class="btn btn-success btn-sm">View Map</a>
+    </div>
+  </div>
+
       </div>
     </div>
-  </section>
-  <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </div>
 
+ 
+</div>
+
+
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
