--- a/donate.html
+++ b/donate.html
@@ -53,18 +53,34 @@
     <div class="container">
       <h3 class="text-center fw-bold mb-5 ">ទីតាំងបរិច្ចាគ និងកែច្នៃនៅកម្ពុជា</h3>
       <div class="row gy-4">
+                        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card">
+            <img src="assets/Kropum/img/snurkhorav.jpg" alt="Ocean Turtle" class="card-img">
+            <div class="card-overlay">
+                <a href="clothline.html" class="text-decoration-none"><span class="card-overlay-icon" >&#128279;</span></a>
+
+            </div>
+            <div class="card-body">
+              <h3 class="card-title"> ស្នួរខោអាវ</h3>
+              <p class="card-text limit-lines" style="text-indent: 2rem;">យើងបានចាប់ផ្តើមអាជីវកម្មសង្គមរបស់យើងមករយៈពេលប្រាំបួនឆ្នាំមុនដោយមានគោលបំណងផ្ដល់ផលប្រយោជន៍ត្រឡប់ទៅសង្គមវិញ។ យើងដំណើរការ</p>
+            </div>
+          </div>
+        </div>
+
+
 
         <!-- Card 1 -->
         <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card">
-            <img src="https://i.pinimg.com/736x/29/2a/f4/292af4d58e89e7ce1f3dc0f0b8368e4f.jpg" alt="White Tiger" class="card-img">
+            <img src="assets/Kropum/img/p1.jpg" alt="White Tiger" class="card-img">
             <div class="card-overlay">
               <a href="pizza4ps.html" class="text-decoration-none"><span class="card-overlay-icon" >&#128279;</span></a>
               
             </div>
             <div class="card-body">
               <h3 class="card-title">Pizza 4P's</h3>
-              <p class="card-text">Location</p>
+              <p class="card-text limit-lines" style="text-indent: 2rem;">ធម្មជាតិបានផ្តល់ឱ្យយើងនូវបរិស្ថាន ហើយវាជាការទទួលខុសត្រូវរបស់យើងក្នុងការការពារវាពីឥទ្ធិពលអាក្រក់
+ព្រោះយើងមិនមានទីជម្រកស្រួលផ្សេងទៀតឡើយ។</p>
             </div>
           </div>
         </div>
@@ -82,20 +98,9 @@
             </div>
           </div>
         </div>
+        
 
         <!-- Card 3 -->
-        <div class="col-sm-12 col-md-6 col-lg-4">
-          <div class="card">
-            <img src="assets/Kropum/img/snurkhorav.jpg" alt="Ocean Turtle" class="card-img">
-            <div class="card-overlay">
-              <span class="card-overlay-icon">&#128279;</span>
-            </div>
-            <div class="card-body">
-              <h3 class="card-title"> ស្នួរខោអាវ</h3>
-              <p class="card-text">Location</p>
-            </div>
-          </div>
-        </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card">
             <img src="assets/Kropum/img/jasnaktmeyknhom.jpg" alt="Ocean Turtle" class="card-img">
@@ -168,7 +173,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div>  
     </div>
   </section>
       <nav aria-label="Course pagination" class="mb-5">
