--- a/ng.html
+++ b/ng.html
@@ -126,6 +126,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+  <!-- How It Works Section -->
   <section>
     <div class="container text-center my-5">
       <h2 class="mb-4">របៀបដំណើរការ</h2>
@@ -154,7 +155,7 @@
 
 
 
-  <!-- Donations Section -->
+  <!-- Donations place Section -->
   <section id="donations" class="container my-5">
     <h2><i class="fas fa-map-marker-alt me-2 mb-3"></i>កន្លែងទទួលបរិច្ចាគ និងកែច្នៃ</h2>
     <div class="row g-4">
@@ -191,7 +192,7 @@
       </div>
     </div>
   </section>
-  <!-- Events Section -->
+  <!-- Donate Section -->
   <section id="events" class="container my-5">
     <div class="container my-5">
       <h2 class="mb-4">ចែករំលែករបស់ដែលអ្នកប្រើប្រាស់រួច</h2>
@@ -200,26 +201,27 @@
           <div class="card p-3 shadow-sm ">
             <i class="fa-solid fa-tshirt fa-2x text-success mb-3" style="margin-left: 165px;"></i>
             <h5 class="card-title">សម្លៀកបំពាក់</h5>
-            <p class="card-text">Donate your clean, used clothes to people in need.</p>
+            <p class="card-text">បរិច្ចាគសម្លៀកបំពាក់ដែលអ្នកបានប្រើប្រាស់រួច ដល់មនុស្សដែលកំពុងត្រូវការ</p>
           </div>
         </div>
         <div class="col-4">
           <div class="card p-3 shadow-sm">
             <i class="fa-solid fa-couch fa-2x text-success mb-3" style="margin-left: 165px;"></i>
             <h5 class="card-title">គ្រឿងសង្ហារិម</h5>
-            <p class="card-text">Give old furniture a new life by donating it to where needed</p>
+            <p class="card-text">ផ្តល់ជីវិតថ្មីដល់គ្រឿងសង្ហារឹមចាស់របស់អ្នក ដោយបរិច្ចាគវាទៅកាន់កន្លែងដែលត្រូវការ</p>
           </div>
         </div>
         <div class="col-4">
           <div class="card p-3 shadow-sm">
             <i class="fa-solid fa-laptop fa-2x text-success mb-3" style="margin-left: 165px;"></i>
             <h5 class="card-title">ឧបករណ៍អេឡិចត្រូនិច</h5>
-            <p class="card-text">Recycle and reuse gadgets instead of throwing them away.</p>
+            <p class="card-text">កែច្នៃ និងប្រើឡើងវិញឧបករណ៍អេឡិចត្រូនិក ជំនួសឱ្យការបោះចោល.</p>
           </div>
         </div>
       </div>
     </div>
   </section>
+  <!-- Donate Partner Section -->
   <section>
     <div class="container my-5">
       <h3 class="mt-4">ដៃគូរដែលទទួលបរិច្ចាគ</h3>
