--- a/event1.html
+++ b/event1.html
@@ -4,195 +4,146 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css">
-  <link rel="stylesheet" href="assets/css/theme.css">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <title>Forest EcoPreneurs Program</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Hanuman:wght@100..900&family=Oswald:wght@200..700&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sevillana&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="assets/Kropum/event1.css">
-  <title>Event1</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <style>
+    body {
+      font-family: 'Hanuman', sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+
+    .hero-banner {
+      background-color: #f8f9fa;
+      padding: 30px 0;
+      border-radius: 10px;
+    }
+
+    .hero-banner img {
+      width: 100%;
+      border-radius: 10px;
+    }
+
+    .quick-info {
+      background: #e9f5ec;
+      padding: 15px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+
+    .quick-info p {
+      margin: 5px 0;
+    }
+
+    .event-description h2 {
+      margin-top: 20px;
+      margin-bottom: 15px;
+      font-weight: 700;
+    }
+
+    .event-description ul {
+      list-style: none;
+      padding-left: 0;
+    }
+
+    .event-description li::before {
+      content: "✅";
+      margin-right: 8px;
+    }
+
+    .swiper-slide img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 8px;
+    }
+
+    .btn-cta {
+      margin: 5px 5px 15px 0;
+    }
+  </style>
 </head>
 
 <body>
-  <section>
-    <div class="container">
-      <div class="row">
 
-        <div class="col-md-12 col-lg-6">
-          <div class="hero-banner"><img src="assets/Kropum/img/event4.jpg" class="hero-img" alt="" style="width: 95%;">
-          </div>
-        </div>
-        <div class="col-lg-6 align-items-center justify-content-center mt-10">
-          <div class="card border-0">
-            <div class="card-body">
-              <h1 class="text-center fw-bold">Forest EcoPreneurs <span class="text-success">Incubation Program</span>
-              </h1>
-              <p class="text-center text-black-50">កាលបរិច្ឆេទ៖ ១៩ ធ្នូរ ២០២៥</p>
-              <p>ចុះឈ្មោះតាមរយៈ​ <a href="#" class="text-decoration-none">Form</a></p>
-              <p>បណ្ដាញសង្គម៖​ <a href="https://www.facebook.com/share/p/1WMtBwHKp3/?mibextid=wwXIfr"
-                  class="text-decoration-none">facebook</a></p>
-              <p>ឬទំនាក់ទំនងតាម តេឡេក្រាម៖ <a href="https://t.me/lylythoub" class="text-decoration-none">Telegram</a>
-              </p>
-              <p>ស្វែងរកព័ត៌មានបន្ថែម និងចូលរួមដាក់ពាក្យតាមរយៈគេហទំព័រខាងក្រោម៖ <a class="text-decoration-none"
-                  href="https://l.facebook.com/l.php?u=https%3A%2F%2Fphnompenh.impacthub.net%2Fworks%2Fforest-ecopreneurs-incubation-program-khr%2F%3Ffbclid%3DIwZXh0bgNhZW0CMTAAYnJpZBExR3NBcHJ4S1kyYU5hNEVDawEePIasOnwBglHSKgybMRD6m7aOxkt5Jdhg6X0NZEsiU4uzRJdcxK0EVqnQxUs_aem_CQ9tXr4ya_hYerPZj-vVSQ&h=AT3D9IIHnBPVPIeC-65YyWHuEmp36yCZbtWCsRUfn_BQJZLFQi36QfmIWJ1Eo_XMVM1T3QKMBo7SuRIHHeER1r-HIR-sw5ugK9lNjq8xic8JdoKwTH5IipOj13RMgJRW1FnQ0chB4kGbEuK-&__tn__=-UK-R&c[0]=AT30juRJPGtqCx2N6vN0uasRh008Gr5gpGmnQjaiPLlxiu2D0nsiDUBeA5anl5zGBfTdRP9X7M_BbduwottyXHGXTxT6Xs01NuKK6yO4p3T4lWi2K9uH5tbQrO8ypJjdOWVbbpacbBIHjkiAHXYF0JSG9WXnQeDyVrklSAN_D36LhVGWkjQK-frW2AFHGg">impacthub.com</a>
-              </p>
-
-
-            </div>
-          </div>
-
-        </div>
+  <!-- Hero Section -->
+  <section class="container my-4">
+    <div class="row align-items-center">
+      <div class=" col-md-12 col-lg-6 mb-3 mb-lg-0">
+        <img src="assets/Kropum/img/event4.jpg" alt="Forest EcoPreneurs" class="hero-banner img-fluid" style="width: 90%;">
       </div>
-      <p class="mt-5">កាលបរិច្ឆេទ៖ ១៩ ធ្នូរ ២០២៥</p>
-      <div class="col-lg-8">
-        <p>[ Forest Ecopreneurs Incubation Program បើកទទួលពាក្យហើយ! ]
-          <br>តើអ្នកជាសហគ្រិនដែលជឿជាក់លើការការពារបរិស្ថាន និងចង់ជួយសហគមន៍ព្រៃឈើមែនទេ? បើដូច្នេះ
-          ឱកាសនេះគឺធ្វើឡើងសម្រាប់អ្នក! <br>😉🌳
-          ពួកយើងត្រេកអរនឹងណែនាំអ្នកទាំងអស់គ្នាពីគម្រោង Forest Ecopreneurs Incubation Program
-          ដែលជាគម្រោងបណ្តុះបណ្តាលអាជីវកម្មដើម្បីពង្រឹងគំនិតផ្តួចផ្តើមពាក់ព័ន្ធនឹងការការពារព្រៃឈើ
-          និងការអភិវឌ្ឍន៍ជីវភាពរស់នៅក្នុងប្រទេសកម្ពុជា។
-          <br>តើអ្នកអាចរំពឹងអ្វីពីកម្មវិធីនេះខ្លះ?
-          ℹ️ ទទួលបានដំបូន្មានពិត ការណែនាំ ផែនការ និងចំណេះដឹងជាច្រើនទៀតពីអ្នកណែនាំជំនាញ
-          📌 សិក្ខាសាលាអប់រំបណ្តុះបណ្តាល វគ្គណែនាំពីគ្រូបង្វឹកដើម្បីបង្កើនជំនាញ
-          និងយុទ្ធសាស្ត្រអាជីវកម្មរបស់អ្នក។
-          🛜 ពង្រីកបណ្តាញទំនាក់ទំនង និងការគាំទ្រកាន់តែច្រើន
-          🌱 ការអនុវត្តដោយមានវេទិកាសិក្សាជាក់ស្តែង ដើម្បីបង្កើនឥទ្ធិពលរបស់អ្នកទាំងលើអាជីវកម្ម
-          និងបរិបទអាជីវកម្មរបស់អ្នក។
-          ចាប់ផ្តើមពីវិស័យទេសចរណ៍ប្រកបដោយនិរន្តរភាព ទៅជាផលិតផលដែលមិនប៉ះពាល់ដល់ព្រៃឈើ
-          ចូលរួមដាក់ពាក្យឥឡូវនេះឲ្យបានមុនថ្ងៃទី ១៨ ខែធ្នូរ ឆ្នាំ 2025។
-          ប៉ុន្តែសូមកុំរង់ចាំរហូតដល់នាទីចុងក្រោយណា — តស់!​ ធ្វើឱ្យឆ្នាំនេះក្លាយជាឆ្នាំ
-          ឆ្ពោះទៅកាន់ការសម្រេចនៃគោលដៅរបស់អ្នកជាមួយយើងទាំងអស់គ្នា។
-        </p>
+      <div class="col-lg-6">
+        <h1 class="fw-bold">Forest EcoPreneurs <span class="text-success">Incubation Program</span></h1>
+        <div class="quick-info">
+          <p><i class="fa-solid fa-calendar-days text-success"></i> កាលបរិច្ឆេទ៖ ១៩ ធ្នូ ២០២៥</p>
+          <p><i class="fa-solid fa-location-dot text-success"></i> ភ្នំពេញ, កម្ពុជា</p>
+          <p><i class="fa-solid fa-link text-success"></i> <a href="#" class="text-decoration-none">Form ចុះឈ្មោះ</a></p>
+          <p><i class="fa-brands fa-facebook text-primary"></i> <a href="https://www.facebook.com/share/p/1WMtBwHKp3/?mibextid=wwXIfr" class="text-decoration-none">Facebook</a></p>
+          <p><i class="fa-brands fa-telegram text-info"></i> <a href="https://t.me/lylythoub" class="text-decoration-none">Telegram</a></p>
+        </div>
+        <div>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSeU1dYVf5LM1VWY44mqvswTMkaE8VzZaUsrM9AqgAk08EhZ5g/viewform?usp=header" class="btn btn-success btn-cta">ចុះឈ្មោះឥឡូវនេះ</a>
+          <a href="https://phnompenh.impacthub.net/" class="btn btn-outline-success btn-cta">ព័ត៌មានលម្អិត</a>
+        </div>
       </div>
     </div>
   </section>
 
-  <section>
-    <div class="container py-5">
-      <h3>ព្រឹត្តិការណ៍ផ្សេងទៀត</h3>
-      <div class="swiper">
-        <!-- Wrapper -->
-        <div class="swiper-wrapper">
+  <!-- Event Description -->
+  <section class="container event-description mb-5">
+    <h2>ព័ត៌មានបន្ថែមពីកម្មវិធី</h2>
+    <p>តើអ្នកជាសហគ្រិនដែលចូលចិត្តការការពារបរិស្ថាន និងចង់ជួយសហគមន៍ព្រៃឈើមែនទេ? កម្មវិធីនេះសម្រាប់អ្នក។</p>
+    <ul>
+      <li>ទទួលបានដំបូន្មាន និងការណែនាំពីអ្នកជំនាញ</li>
+      <li>សិក្ខាសាលា និងវគ្គបណ្តុះបណ្តាល</li>
+      <li>ពង្រីកបណ្តាញទំនាក់ទំនង និងការគាំទ្រ</li>
+      <li>អនុវត្តន៍ជាក់ស្តែង ដើម្បីបង្កើនផលប៉ះពាល់លើអាជីវកម្ម</li>
+    </ul>
+    <p>ចាប់ផ្តើមពីវិស័យទេសចរណ៍ប្រកបដោយនិរន្តរភាព ទៅជាផលិតផលដែលមិនប៉ះពាល់ដល់ព្រៃឈើ។ ចូលរួមដាក់ពាក្យមុនថ្ងៃទី ១៨ ខែធ្នូ ឆ្នាំ ២០២៥។</p>
+  </section>
 
-          <div class="swiper-slide">
-            <div class="card">
-              <img src="assets/Kropum/img/event9.jpg" alt="" class="card-img-top card-img">
-              <div class="card-body mt-2">
-                <h5><a href="event6.html" class="text-decoration-none">LCOY</a></h5>
-                <p class="card-text">កាលបរិច្ឆេទ ៖ ១៩​ មករា​ ២០២៦</p>
-              </div>
+  <!-- Related Events Carousel -->
+  <section class="container mb-5">
+    <h3 class="mb-3">ព្រឹត្តិការណ៍ផ្សេងទៀត</h3>
+    <div class="swiper">
+      <div class="swiper-wrapper">
+        <!-- Slide Example -->
+        <div class="swiper-slide">
+          <div class="card">
+            <img src="assets/Kropum/img/event9.jpg" alt="LCOY">
+            <div class="card-body mt-2">
+              <h5><a href="event6.html" class="text-decoration-none">LCOY</a></h5>
+              <p class="card-text">កាលបរិច្ឆេទ៖ ១៩ មករា ២០២៦</p>
             </div>
           </div>
-
-          <div class="swiper-slide">
-            <div class="card">
-              <img src="assets/Kropum/img/event6.jpg" alt="" class="card-img-top">
-              <div class="card-body mt-2">
-                <h5><a href="event2.html" class="text-decoration-none">Workshop Art,Culture</a></h5>
-                <p class="card-text">កាលបរិច្ឆេទ ៖ ២០​ ធ្នូរ​ ២០២៥</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="swiper-slide">
-            <div class="card">
-              <img src="assets/Kropum/img/event7.jpg" alt="" class="card-img-top">
-              <div class="card-body mt-2">
-                <h5><a href="event3.html" class="text-decoration-none">Plastic Waste</a></h5>
-                <p class="card-text">កាលបរិច្ឆេទ ៖ ០៣​ មករា​ ២០២៦</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="swiper-slide">
-            <div class="card">
-              <img src="assets/Kropum/img/Event1.jpg" alt="" class="card-img-top">
-              <div class="card-body mt-2">
-                <h5><a href="event4.html" class="text-decoration-none">ECO Leadership Discovery</a></h5>
-                <p class="card-text">កាលបរិច្ឆេទ ៖ ១៩​ មករា​ ២០២៦</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="swiper-slide">
-            <div class="card">
-              <img src="assets/Kropum/img/Event8.jpg" alt="" class="card-img-top">
-              <div class="card-body mt-2">
-                <h5><a href="event5.html" class="text-decoration-none">យុទ្ធនាការ សម្អាតទីក្រុង</a></h5>
-                <p class="card-text">កាលបរិច្ឆេទ ៖ ៣១​ មករា​ ២០២៦</p>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="card">
-              <img src="assets/Kropum/img/Event2.jpg" alt="" class="card-img-top">
-              <div class="card-body mt-2">
-                <h5><a href="event7.html" class="text-decoration-none">យុវជនជជែកពិភាក្សា អំពីបរិស្ថាន</a></h5>
-                <p class="card-text">កាលបរិច្ឆេទ ៖ ១៩​ មករា​ ២០២៦</p>
-              </div>
-            </div>
-
-          </div>
-          <div class="swiper-slide">
-            <div class="card">
-              <img src="assets/Kropum/img/EVENT3.jpg" alt="" class="card-img-top">
-              <div class="card-body mt-2">
-                <h5><a href="event8.html" class="text-decoration-none">ប្រកួតរូបភាពអំពី Waste of life</a></h5>
-                <p class="card-text">កាលបរិច្ឆេទ ៖ ១៩​ មករា​ ២០២៦</p>
-              </div>
-            </div>
-
-          </div>
-          <div class="swiper-slide">
-            <div class="card">
-              <img src="assets/Kropum/img/event4.jpg" alt="" class="card-img-top">
-              <div class="card-body mt-2">
-                <h5><a href="event1.html" class="text-decoration-none">Forest EcoPreneurs</a></h5>
-                <p class="card-text">កាលបរិច្ឆេទ ៖ ១៩​ ធ្នូរ​ ២០២៥</p>
-              </div>
-            </div>
-
-          </div>
-
         </div>
-
-        <!-- Pagination -->
-        <!-- <div class="swiper-pagination"></div> -->
-
-        <!-- Navigation -->
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
+        <!-- Repeat other slides -->
       </div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
     </div>
   </section>
 
-
-  <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
     const swiper = new Swiper('.swiper', {
       slidesPerView: 1,
       spaceBetween: 20,
       loop: true,
-      pagination: {
-        el: '.swiper-pagination',
-        clickable: true,
-      },
       navigation: {
         nextEl: '.swiper-button-next',
         prevEl: '.swiper-button-prev',
       },
       breakpoints: {
-        0: { slidesPerView: 1 },      // mobile
-        576: { slidesPerView: 2 },    // small devices
-        768: { slidesPerView: 3 },    // tablets
-        992: { slidesPerView: 4 }     // desktops
+        576: { slidesPerView: 2 },
+        768: { slidesPerView: 3 },
+        992: { slidesPerView: 4 }
       }
     });
   </script>
-</body>
 
+</body>
 </html>
