--- a/reuse.html
+++ b/reuse.html
@@ -1,153 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Donate Reuse</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Post New Item</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/theme.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Hanuman:wght@100..900&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: "Hanuman", sans-serif;
+      background: #f9fafb;
+      color: #333;
+    }
+    .card {
+      border-radius: 15px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+  </style>
 </head>
 <body>
 
-<section id="donate-product" class="py-5 bg-light">
-  <div class="container">
-    <h2 class="text-center mb-4">Donate Your Reused Product</h2>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-8">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title text-center mb-4">Post New Donation Item</h2>
+          <form>
+            
+            <!-- Item Name -->
+            <div class="mb-3">
+              <label for="itemName" class="form-label">Item Name</label>
+              <input type="text" class="form-control" id="itemName" placeholder="Enter item name">
+            </div>
 
-    <!-- Tabs -->
-    <ul class="nav nav-tabs justify-content-center mb-4" id="donationTabs" role="tablist">
-      <li class="nav-item" role="presentation">
-        <button class="nav-link active" id="recent-tab" data-bs-toggle="tab" data-bs-target="#recent" type="button" role="tab">Recent</button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button class="nav-link" id="all-tab" data-bs-toggle="tab" data-bs-target="#all" type="button" role="tab">All</button>
-      </li>
-    </ul>
+            <!-- Category -->
+            <div class="mb-3">
+              <label for="itemCategory" class="form-label">Category</label>
+              <select class="form-select" id="itemCategory">
+                <option selected disabled>Choose category</option>
+                <option value="Clothes">Clothes</option>
+                <option value="Furniture">Furniture</option>
+                <option value="Electronics">Electronics</option>
+                <option value="Books">Books</option>
+                <option value="Others">Others</option>
+              </select>
+            </div>
 
-    <div class="tab-content" id="donationTabsContent">
-      <div class="tab-pane fade show active" id="recent" role="tabpanel">
-        <div class="row g-4" id="recentGallery"></div>
-      </div>
-      <div class="tab-pane fade" id="all" role="tabpanel">
-        <div class="row g-4" id="allGallery"></div>
-      </div>
-    </div>
+            <!-- Upload Image -->
+            <div class="mb-3">
+              <label for="itemImage" class="form-label">Upload Image</label>
+              <input class="form-control" type="file" id="itemImage">
+            </div>
 
-    <!-- Donation Form -->
-    <div class="row justify-content-center mt-5">
-      <div class="col-lg-8">
-        <form class="card shadow p-4" id="donationForm">
-          <div class="mb-3">
-            <label for="productTitle" class="form-label">Product Title</label>
-            <input type="text" class="form-control" id="productTitle" required />
-          </div>
-          <div class="mb-3">
-            <label for="productImage" class="form-label">Upload Image</label>
-            <input type="file" class="form-control" id="productImage" accept="image/*" onchange="previewImage(event)" />
-            <img id="preview" class="mt-2" style="width:100px; display:none;">
-          </div>
-          <div class="mb-3">
-            <label for="productCategory" class="form-label">Category</label>
-            <select class="form-select" id="productCategory" required>
-              <option disabled selected>Choose...</option>
-              <option value="clothes">Clothes</option>
-              <option value="plastic">Plastic</option>
-              <option value="household">Household</option>
-              <option value="electronics">Electronics</option>
-              <option value="other">Other</option>
-            </select>
-          </div>
-          <div class="mb-3">
-            <label for="productDescription" class="form-label">Description</label>
-            <textarea class="form-control" id="productDescription" rows="3"></textarea>
-          </div>
-          <div class="mb-3">
-            <label for="donorContact" class="form-label">Your Contact</label>
-            <input type="text" class="form-control" id="donorContact" required />
-          </div>
-          <div class="d-grid">
-            <button type="submit" class="btn btn-success">Post Donation</button>
-          </div>
-        </form>
+            <!-- Contact -->
+            <div class="mb-3">
+              <label for="contactInfo" class="form-label">Contact Information</label>
+              <input type="text" class="form-control" id="contactInfo" placeholder="Phone number or Email">
+            </div>
+
+            <!-- Description -->
+            <div class="mb-3">
+              <label for="itemDescription" class="form-label">Description</label>
+              <textarea class="form-control" id="itemDescription" rows="3" placeholder="Write a short description..."></textarea>
+            </div>
+
+            <!-- Buttons -->
+            <div class="text-center">
+              <button type="submit" class="btn btn-success me-2">
+                <i class="fa fa-check-circle"></i> Submit
+              </button>
+              <a href="index.html" class="btn btn-secondary">
+                <i class="fa fa-arrow-left"></i> Back
+              </a>
+            </div>
+
+          </form>
+        </div>
       </div>
     </div>
   </div>
-</section>
+</div>
 
-<script>
-  const donationForm = document.getElementById('donationForm');
-  const recentGallery = document.getElementById('recentGallery');
-  const allGallery = document.getElementById('allGallery');
-
-  // Load donations from localStorage
-  let donations = JSON.parse(localStorage.getItem('donations')) || [];
-
-  // Image preview
-  function previewImage(event) {
-    const reader = new FileReader();
-    reader.onload = function() {
-      const output = document.getElementById('preview');
-      output.src = reader.result;
-      output.style.display = 'block';
-    };
-    reader.readAsDataURL(event.target.files[0]);
-  }
-
-  function addDonationCard(donation, prepend = true) {
-    const card = document.createElement('div');
-    card.className = 'col-sm-12 col-md-6 col-lg-4';
-    card.innerHTML = `
-      <div class="card h-100">
-        ${donation.image ? `<img src="${donation.image}" class="card-img-top" style="height:200px; object-fit:cover;">` : ''}
-        <div class="card-body">
-          <h5 class="card-title">${donation.title}</h5>
-          <p class="card-text"><strong>Category:</strong> ${donation.category}</p>
-          <p class="card-text">${donation.description}</p>
-          <p class="card-text"><small>Contact: ${donation.contact}</small></p>
-          <button class="btn btn-danger btn-sm mark-taken">Mark as Taken</button>
-        </div>
-      </div>
-    `;
-
-    card.querySelector('.mark-taken').addEventListener('click', () => {
-      donations = donations.filter(d => d.id !== donation.id);
-      localStorage.setItem('donations', JSON.stringify(donations));
-      renderDonations();
-    });
-
-    if (prepend) recentGallery.prepend(card.cloneNode(true));
-    allGallery.appendChild(card);
-  }
-
-  function renderDonations() {
-    recentGallery.innerHTML = '';
-    allGallery.innerHTML = '';
-    donations.forEach(d => addDonationCard(d, false));
-  }
-
-  donationForm.addEventListener('submit', function(e) {
-    e.preventDefault();
-
-    const donation = {
-      id: Date.now(),
-      title: document.getElementById('productTitle').value,
-      category: document.getElementById('productCategory').value,
-      description: document.getElementById('productDescription').value,
-      contact: document.getElementById('donorContact').value,
-      image: document.getElementById('preview').src || ''
-    };
-
-    donations.push(donation);
-    localStorage.setItem('donations', JSON.stringify(donations));
-    renderDonations();
-
-    this.reset();
-    document.getElementById('preview').style.display = 'none';
-    new bootstrap.Tab(document.querySelector('#recent-tab')).show();
-  });
-
-  // Initial render
-  renderDonations();
-</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
