--- a/index.html
+++ b/index.html
@@ -301,7 +301,8 @@
     </header>
     <main>
       <section class="hero-banner mt-8 mt-md-0">
-        <div class="container">
+        <img src="assets/image/enviroment.jpg" alt="" class="bg-banner-img position-relative">
+        <div class="container banner">
           <div class="row d-flex align-items-center">
             <div class="col-12 col-md-6">
               <h6 class="text-success fs-6 mt-5" id="text-animation"></h6>
@@ -324,9 +325,6 @@
             <div class="col-md-6">
               <div
                 class="banner-img position-relative d-none d-md-block"
-                data-aos="fade-left"
-                data-aos-duration="1000"
-                data-aos-delay="200"
               >
                 <img
                   src="assets/image/banner-1.png"
