--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <!-- Search Button -->
                 <form class="d-flex mb-2" role="search">
                   <input
-                    class="form-control search-1"
+                    class="form-control search-1 d-md-none"
                     type="search"
                     placeholder="Search"
                     aria-label="Search"
@@ -300,13 +300,13 @@
       </nav>
     </header>
     <main>
-      <section class="hero-banner mt-8 mt-md-0">
+      <section class="hero-banner mt-9 mt-md-0">
         <img src="assets/image/enviroment.jpg" alt="" class="bg-banner-img position-relative">
         <div class="container banner">
           <div class="row d-flex align-items-center">
             <div class="col-12 col-md-6">
               <h6 class="text-success fs-6 mt-5" id="text-animation"></h6>
-              <h2 class="mt-3">
+              <h2 class="mt-3 text-fs">
                 សាមគ្គីគ្នានាំមកនៅការជោគជ័យ, ចូររួមទាំងអស់គ្នាដើម្បី<span
                   class="text-success"
                   >បរិស្ថាន</span
@@ -314,7 +314,7 @@
               </h2>
               <a
                 href="ng.html"
-                class="btn bg-success text-white mt-2 mb-3 mb-md-0 mt-md-5 hvr-wobble-top"
+                class="btn bg-success text-white mt-2 mb-3 mb-md-0 mt-md-5 hvr-wobble-top btn-fs"
                 data-aos="fade-right"
                 data-aos-duration="1000"
                 data-aos-delay="200"
@@ -331,21 +331,6 @@
                   alt=""
                   class="banner-img"
                 />
-                <!-- <img
-                  src="assets/image/rubbish.png"
-                  alt=""
-                  class="img-fluid position-absolute banner-1"
-                />
-                <img
-                  src="assets/image/rubbish.png"
-                  alt=""
-                  class="img-fluid position-absolute banner-2"
-                />
-                <img
-                  src="assets/image/rubbish.png"
-                  alt=""
-                  class="img-fluid position-absolute banner-3"
-                /> -->
               </div>
             </div>
           </div>
