--- a/index.html
+++ b/index.html
@@ -101,7 +101,15 @@
                   <a class="nav-link nav-hover" href="ng.html">សកម្មភាពសង្គម</a>
                 </li>
                 <li class="nav-item fs-5">
-                  <a class="nav-link nav-hover" href="#">ផលិតផលកែច្នៃ</a>
+                  <a class="nav-link nav-hover" href="e-commerce.html">ផលិតផលកែច្នៃ</a>
+                </li>
+                <li class="nav-item fs-5">
+                  <a
+                    class="nav-link nav-hover"
+                    aria-current="page"
+                    href="about.html"
+                    >អំពីយើង</a
+                  >
                 </li>
               </ul>
             </div>
