--- a/ng.html
+++ b/ng.html
@@ -258,6 +258,14 @@
                 <li class="nav-item fs-5">
                   <a class="nav-link nav-hover" href="#">ផលិតផលកែច្នៃ</a>
                 </li>
+                <li class="nav-item fs-5">
+                  <a
+                    class="nav-link nav-hover"
+                    aria-current="page"
+                    href="about.html"
+                    >អំពីយើង</a
+                  >
+                </li>
               </ul>
             </div>
           </div>
