--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         style="height: 70px"
       >
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
             <img
               src="assets/image/green_leaves_round_logo.png"
               class="logo"
@@ -42,7 +42,7 @@
           >
             <div class="offcanvas-header bg-nav" style="height: 70px">
               <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-                <a class="navbar-brand d-block" href="#">
+                <a class="navbar-brand d-block" href="index.html">
                   <img
                     src="assets/image/green_leaves_round_logo.png"
                     style="width: 60px"
@@ -330,7 +330,7 @@
                 ចូលរួមជាមួយយើង
               </a>
             </div>
-            <div class="col-md-6">
+            <div class="col-12 col-md-6">
               <div
                 class="banner-img position-relative d-none d-md-block"
               >
