--- a/register.html
+++ b/register.html
@@ -29,7 +29,7 @@
                                     <div class="card border-0 rounded-0 bg-transparent">
                                         <div class="card-body text-center">
                                             <h1 class="text-light display-5 fw-bolder">Let's Get Started</h1>
-                                            <p class="text-light">Join us and unlock your potential.</p>
+                                            <p class="text-light">Join us and unlock our potential.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -41,10 +41,8 @@
                                     <form action="" class="row text-center" novalidate>
                                         <div class="col-lg-12">
                                             <div class="mb-4" style="padding: 0 80px;">
-                                                <div class="form-floating">
-                                                    <input type="text" id="" placeholder="Your Name" required
-                                                        class="form-control border-0 border-bottom rounded-0 border-secondary pb-2 bg-transparent text-light">
-                                                </div>
+                                                <input type="text" id="" placeholder="Your Name" required
+                                                    class="form-control border-0 border-bottom rounded-0 border-secondary pb-2 bg-transparent text-light">
                                             </div>
                                         </div>
                                         <div class="col-lg-12">
