--- a/signin.html
+++ b/signin.html
@@ -22,7 +22,7 @@
                     <div class="col-10 col-md-10">
                         <div class="row bg-light rounded-4 shadow-sm">
                             <!-- Form Section -->
-                            <div class="col-12 col-md-5 py-4">
+                            <div class="col-11 col-md-5 py-4">
                                 <form class="px-4" novalidate>
                                     <h1 class="display-5 fw-bolder mb-5 text-center">Welcome Back</h1>
                                     <!-- Email -->
@@ -36,7 +36,7 @@
                                             class="form-control border-0 rounded-pill bg-success-subtle text-success py-2">
                                     </div>
                                     <!-- Submit Button -->
-                                    <div class="d-grid mb-3">
+                                    <div class="d-grid mb-3 w-75 m-auto">
                                         <button class="btn btn-success rounded-pill" type="submit">Let's Go</button>
                                     </div>
                                     <!-- Remember & Forgot -->
@@ -65,7 +65,7 @@
                             </div>
                             <!-- Image Section -->
                             <div class="col-md-7 d-none d-md-block p-1 rounded-4">
-                                <img src="assets/chhorng/img/pexel-leaf.jpg" class="img-fluid rounded-4 h-100 w-100 object-fit-cover" alt="Sign-In Image">
+                                <img src="assets/chhorng/img/recycle.jpg" class="rounded-4 h-100 w-100 object-fit-cover" alt="Sign-In Image" >
                             </div>
                         </div>
                     </div>
