--- a/newpassword.html
+++ b/newpassword.html
@@ -28,29 +28,29 @@
                                 <div class="col-11 col-md-6 col-lg-5">
                                     <h1 class="display-5 fw-bolder text-center text-success mb-3">Gotcha!</h1>
                                     <p class="text-secondary text-center mb-4">
-                                        Let's create a new password for your account
+                                        បង្កើតពាក្យសម្ងាត់ថ្មីសម្រាប់គណនីរបស់អ្នក
                                     </p>
                                     <form>
                                         <!-- New Password -->
                                         <div class="mb-4">
                                             <label for="newPassword" class="form-label">
-                                                Create New Password <span class="text-danger">*</span>
+                                                បង្កើតពាក្យសម្ងាត់ថ្មី<span class="text-danger">*</span>
                                             </label>
-                                            <input type="password" id="newPassword" placeholder="Password" required
+                                            <input type="password" id="newPassword" placeholder="ពាក្យសម្ងាត់" required
                                                 class="form-control rounded-pill rounded-0 border-success text-success">
                                         </div>
                                         <!-- Confirm Password -->
                                         <div class="mb-4">
                                             <label for="confirmPassword" class="form-label">
-                                                Confirm Your New Password <span class="text-danger">*</span>
+                                                បញ្ជាក់ពាក្យសម្ងាត់ថ្មីរបស់អ្នក <span class="text-danger">*</span>
                                             </label>
-                                            <input type="password" id="confirmPassword" placeholder="Password" required
+                                            <input type="password" id="confirmPassword" placeholder="ពាក្យសម្ងាត់ថ្មី" required
                                                 class="form-control rounded-pill rounded-0 border-success text-success">
                                         </div>
                                         <!-- Submit Button -->
                                         <div class="text-center mt-4">
                                             <button type="submit" class="btn btn-success px-4 rounded-pill">
-                                                Submit New Password
+                                                ដាក់ស្នើពាក្យសម្ងាត់ថ្មី
                                             </button>
                                         </div>
                                     </form>
