--- a/pin.html
+++ b/pin.html
@@ -48,9 +48,9 @@
                                 </div>
                                 <!-- Right Form -->
                                 <div class="col-12 col-md-6 col-lg-5">
-                                    <h1 class="display-6 fw-bolder text-dark text-center mb-3">Verify Your Email</h1>
+                                    <h1 class="display-6 fw-bolder text-dark text-center mb-3">ផ្ទៀងផ្ទាត់អ៊ីមែល</h1>
                                     <p class="text-secondary text-center mb-4" style="font-size: 16px;">
-                                        Please enter the 4-digit code sent to your email
+                                        សូមបញ្ចូលកូដ <span class="text-success fw-bolder">​៤</span> ខ្ទង់ដែលបានផ្ញើទៅអ៊ីមែលរបស់អ្នក
                                     </p>
                                     <form>
                                         <div class="d-flex justify-content-center gap-3 mb-4 flex-wrap">
@@ -65,8 +65,8 @@
                                         </div>
                                     </form>
                                     <div class="text-center mt-3">
-                                        <a href="#" class="text-success d-block mb-4 ">Resend Code</a>
-                                        <a href="newpassword.html" class="btn btn-success rounded-pill px-5">Verify</a>
+                                        <a href="#" class="text-success d-block mb-4 ">ផ្ញើលេខកូដម្តងទៀត</a>
+                                        <a href="newpassword.html" class="btn btn-success rounded-pill px-5">ផ្ទៀងផ្ទាត់</a>
                                     </div>
                                 </div>
                             </div>
