--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </div>
           </div>
           <div class="user-profile d-flex align-items-center">
-            <button
+            <!-- <button
               class="navbar-toggler border-0 shadow-none fs-4"
               type="button"
               data-bs-toggle="offcanvas"
@@ -124,7 +124,7 @@
               aria-label="Toggle navigation"
             >
               <span class="navbar-toggler-icon"></span>
-            </button>
+            </button> -->
             <!-- Search Button -->
             <form class="d-flex" role="search">
               <input
@@ -303,6 +303,16 @@
                 </li>
               </ul>
             </div>
+            <button
+              class="navbar-toggler border-0 shadow-none fs-4"
+              type="button"
+              data-bs-toggle="offcanvas"
+              data-bs-target="#offcanvasNavbar"
+              aria-controls="offcanvasNavbar"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
           </div>
         </div>
       </nav>
